Fixed IE bug.  Runs fine now on IE, Firefox, and Safari

--- a/trunk/incl/css/list.css
+++ b/trunk/incl/css/list.css
@@ -40,8 +40,8 @@
 	color:#FFF;
 	-moz-border-radius-topleft:6px;
 	-moz-border-radius-topright:6px;
-	-webkit-border-radius-topleft:6px;
-	-webkit-border-radius-topright:6px;
+	-webkit-border-top-left-radius:6px;
+	-webkit-border-top-right-radius:6px;
 	border-radius-topleft:6px;
 	border-radius-topright:6px;
 }
